--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,19 @@
   background: #f5f5f5 5px center/3em no-repeat;
 }
 .rmddanger {
-  background-image: url("../images/danger.png");
+  background-image: url("../figurer/danger.png");
 }
 .rmdimportant {
-  background-image: url("../images/important.png");
+  background-image: url("../figurer/important.png");
 }
 .rmdinfo {
-  background-image: url("../images/info.png");
+  background-image: url("../figurer/info.png");
 }
 .rmdtip {
-  background-image: url("../images/tip.png");
+  background-image: url("../figurer/tip.png");
 }
 .rmdwarning {
-  background-image: url("../images/warning.png");
+  background-image: url("../figurer/warning.png");
 }
 p.caption {
   color: #777;
